feat: hyprland and waybar -> wayland <3

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,14 +1,23 @@
 monitor=,preferred,auto,auto
+monitor=eDP-1,preferred,auto,auto
 monitor=DP-3,2560x1440,0x0,1
 
 $HOME = /home/alexanek
 
-exec = /home/alexanek/.config/hypr/lid-handler.sh
-exec-once = waybar & hyprpaper
+# Handle lid switch events
+bindl = , switch:off:Lid Switch, exec, /home/alexanek/.dotfiles/hypr/test.sh
+bindl = , switch:on:Lid Switch, exec, /home/alexanek/.dotfiles/hypr/test.sh
+
+exec-once = swww-daemon
+exec-once = waybar
+exec-once = nm-applet --indicator
+exec-once = swww img $HOME/Pictures/wallpapers/wp4607389-fantasy-forest-wallpapers.jpg
+# exec-once = xbanish 
 
 $terminal = alacritty
 $fileManager = dolphin
 $menu = ~/.config/rofi/scripts/launcher.sh
+
 
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
@@ -37,18 +46,20 @@ general {
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-    layout = dwindle
+    layout = master
     allow_tearing = false
+    cursor_inactive_timeout = 5
 }
 
 decoration {
     rounding = 10
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 7      
+        passes = 2   
+        blurls = Alacritty
     }
-    drop_shadow = yes
+    drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
@@ -68,6 +79,7 @@ animations {
 dwindle {
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
+    smart_split = 0
 }
 
 master {
@@ -80,6 +92,7 @@ gestures {
 
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true
 }
 
 device {
@@ -88,13 +101,19 @@ device {
 }
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = opacity 0.85 0.85,class:^(Alacritty)$
 
-
+windowrulev2 = float, class:^(pavucontrol)$
+windowrulev2 = size 800 600, class:^(pavucontrol)$
+windowrulev2 = center, class:^(pavucontrol)$
+workspace = 1, toolbar:false
 # ALT key is Mod1, SUPER key is Mod4
 $ALT = Mod1
 $SUPER = Mod4
 $mainMod = SUPER
 $ctrl = CONTROL
+
+bind =$ALT $SUPER, m, exec, /home/alexanek/.config/hypr/lid-handler.sh
 
 # Navigate windows
 bind = $ALT, h, movefocus, l
@@ -109,14 +128,12 @@ bind = $ALT SHIFT, k, movewindow, u
 bind = $ALT SHIFT, l, movewindow, r
 
 # Resize windows
-bind = $ALT CTRL, h, resizeactive, -20 0
-bind = $ALT CTRL, j, resizeactive, 0 20
-bind = $ALT CTRL, k, resizeactive, 0 -20
-bind = $ALT CTRL, l, resizeactive, 20 0
+bind = $ALT CTRL, h, resizeactive, -30 0
+bind = $ALT CTRL, j, resizeactive, 0 30
+bind = $ALT CTRL, k, resizeactive, 0 -30
+bind = $ALT CTRL, l, resizeactive, 30 0
 
 # Workspace navigation
-bind = CTRL, Right, workspace, +1
-bind = CTRL, Left, workspace, -1
 bind = CTRL, 1, workspace, 1
 bind = CTRL, 2, workspace, 2
 bind = CTRL, 3, workspace, 3
@@ -135,39 +152,22 @@ bind = $SUPER CTRL, r, exec, hyprctl reload
 bind = $SUPER CTRL, q, exit, 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating, 
-bind = $mainMod, d, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, Q, killactive, 
+# bind = $mainMod, M, exit, 
+# bind = $mainMod, E, exec, $fileManager
+# bind = $mainMod, V, togglefloating, 
+# bind = $mainMod, d, exec, $menu
+# bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, J, togglesplit, # dwindle
 
 # Application launch
-bind = $ALT, d, exec, $HOME/.config/rofi/scripts/launcher.sh
+bind = $mainMod, space, exec, $terminal
+bind = $ALT, d, exec, $menu
+bind = $ALT, b, exec, brave-browser
 bind = $SUPER, p, exec, xfce4-screenshooter
 
-# # Move active window to a workspace with mainMod + SHIFT + [0-9]
-# bind = $mainMod SHIFT, 1, movetoworkspace, 1
-# bind = $mainMod SHIFT, 2, movetoworkspace, 2
-# bind = $mainMod SHIFT, 3, movetoworkspace, 3
-# bind = $mainMod SHIFT, 4, movetoworkspace, 4
-# bind = $mainMod SHIFT, 5, movetoworkspace, 5
-# bind = $mainMod SHIFT, 6, movetoworkspace, 6
-# bind = $mainMod SHIFT, 7, movetoworkspace, 7
-# bind = $mainMod SHIFT, 8, movetoworkspace, 8
-# bind = $mainMod SHIFT, 9, movetoworkspace, 9
-# bind = $mainMod SHIFT, 0, movetoworkspace, 10
-#
-# # Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-#
-# # Scroll through existing workspaces with mainMod + scroll
-# bind = $mainMod, mouse_down, workspace, e+1
-# bind = $mainMod, mouse_up, workspace, e-1
-#
-# # Move/resize windows with mainMod + LMB/RMB and dragging
-# bindm = $mainMod, mouse:272, movewindow
-# bindm = $mainMod, mouse:273, resizewindow
+# Media controls
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
