--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 monitor=,preferred,auto,auto
-monitor=eDP-1,preferred,auto,auto
+monitor=eDP-1,preferred,auto,1
 monitor=DP-3,2560x1440,0x0,1
 
 $HOME = /home/alexanek
@@ -56,7 +56,7 @@ decoration {
     blur {
         enabled = true
         size = 7      
-        passes = 2   
+        passes = 3   
         blurls = Alacritty
     }
     drop_shadow = false
@@ -113,6 +113,7 @@ $SUPER = Mod4
 $mainMod = SUPER
 $ctrl = CONTROL
 
+# moni
 bind =$ALT $SUPER, m, exec, /home/alexanek/.config/hypr/lid-handler.sh
 
 # Navigate windows
@@ -150,6 +151,8 @@ bind = $ALT SHIFT, 5, movetoworkspacesilent, 5
 # System control
 bind = $SUPER CTRL, r, exec, hyprctl reload
 bind = $SUPER CTRL, q, exit, 
+bind = $ALT, t, togglefloating, 
+bind = $ALT CTRL, m, exec, killall -SIGUSR1 waybar
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, killactive, 
@@ -161,10 +164,11 @@ bind = $mainMod, Q, killactive,
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Application launch
-bind = $mainMod, space, exec, $terminal
+bind = $mainMod, space, exec, $HOME/.dotfiles/scripts/start_alacritty
 bind = $ALT, d, exec, $menu
-bind = $ALT, b, exec, brave-browser
-bind = $SUPER, p, exec, xfce4-screenshooter
+bind = $ALT, b, exec, brave-browser https://teams.microsoft.com/v2/
+bind = $SUPER, p, exec, ksnip
+
 
 # Media controls
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
