--- a/tmux/modules/tmux.opts.conf
+++ b/tmux/modules/tmux.opts.conf
@@ -14,3 +14,5 @@ set -g renumber-windows on       # renumber all windows when any window is close
 set -g set-clipboard on
 set-window-option -g mode-keys vi
 
+# hmmmmmmmmm
+set -g mouse on
