--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -127,6 +127,8 @@ bind = $ALT SHIFT, h, movewindow, l
 bind = $ALT SHIFT, j, movewindow, d
 bind = $ALT SHIFT, k, movewindow, u
 bind = $ALT SHIFT, l, movewindow, r
+bindm = $ALT, mouse:272, movewindow
+bindm = $ALT, mouse:273, resizewindow
 
 # Resize windows
 bind = $ALT CTRL, h, resizeactive, -30 0
