--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -6,7 +6,7 @@ import = [
 TERM = "xterm-256color"
 
 [font]
-size = 11.5
+size = 12.5
 
 [font.bold]
 family = "MesloLGM Nerd Font"
@@ -34,3 +34,7 @@ save_to_clipboard = true
 [window.padding]
 x = 5
 y = 1
+
+[window]
+decorations = "None"
+opacity = 0.95
