--- a/tmux/modules/bindings/tmux.menu.conf
+++ b/tmux/modules/bindings/tmux.menu.conf
@@ -1,5 +1,5 @@
 # Menu configuration
-bind-key -n M-q display-menu -x L \
+bind-key -n C-q display-menu -x L \
     "New Session"                        S "command-prompt -p \"New Session:\" \"new-session -A -s '%%'\"" \
     "Kill Other Session(s)"              X "kill-session -a" \
     "" \
