--- a/tmux/modules/ui/tmux.status_bar.conf
+++ b/tmux/modules/ui/tmux.status_bar.conf
@@ -14,6 +14,7 @@ set -g @mode_indicator_sync_mode_style fg=$color_bg,bg=$color_red,bold
 set -g @cpu_percentage_format "%3.0f%%"
 set -g @ram_percentage_format "%3.0f%%"
 
+set -g @gh_cache_path "/tmp/tmux-gh-cache"
 #################################### OPTIONS ###################################
 
 set -g status on
@@ -33,6 +34,6 @@ set-window-option -g mode-style bg=$color_purple,fg=$color_bg
 #################################### FORMAT ####################################
 
 set -g status-left "#{tmux_mode_indicator}"
-set -g status-right "#[fg=$color_gray]IP: #(whoamip)  CPU:#{cpu_percentage}  MEM:#{ram_percentage}   #[fg=$color_gray]%R"
+set -g status-right "#[fg=$color_gray]IP: #(whoamip)  CPU:#{cpu_percentage}  MEM:#{ram_percentage}   : #(~/.dotfiles/scripts/gh.sh)  #[fg=$color_gray] %R"
 setw -g window-status-format "#[fg=$color_gray,italics]#I: #[noitalics]#W"
 setw -g window-status-current-format "#[fg=$color_purple,italics]#I: #[fg=$color_buffer,noitalics,bold]#W"
