--- a/tmux/modules/bindings/tmux.session.conf
+++ b/tmux/modules/bindings/tmux.session.conf
@@ -2,6 +2,7 @@
 bind b command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind -n M-. switch-client -n
 bind -n M-, switch-client -p
+bind -n M-w kill-session
 bind-key -n M-a run-shell "$DOTFILES/scripts/tmisc.sh"
 bind a run-shell "$DOTFILES/scripts/edit-tmux-output.sh"
 bind C-s display-popup -E -b none "\
@@ -11,4 +12,4 @@ bind C-s display-popup -E -b none "\
     xargs tmux switch-client -t"
 bind C-a display-popup -E -b none "$DOTFILES/scripts/tsessionizer.sh"
 bind g display-popup -E -b none "$DOTFILES/scripts/tsessionizer-worktrees.sh"
-bind -n M-c display-popup -h 80% -w 85% -e -b "gh dash"
+bind -n M-c display-popup -h 80% -w 85% -e -b 'nvim -c "cd $AXIS/notes/" -c ":lua Snacks.picker.files()"'
