--- a/tmux/modules/bindings/tmux.pane.conf
+++ b/tmux/modules/bindings/tmux.pane.conf
@@ -4,7 +4,9 @@ bind -r h resize-pane -L 10
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 10
-bind -n M-z resize-pane -Z
+bind -n M-z if-shell -F '#{==:#{window_panes},1}' \
+  'resize-pane -Z; split-window -h -d -c "#{pane_current_path}"' \
+  'resize-pane -Z'
 
 # Split panes
 bind s split-window -v -c "#{pane_current_path}"
