--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,7 +1,3 @@
-import = [
-    "~/.config/alacritty/themes/onedark.toml"
-]
-
 [env]
 TERM = "xterm-256color"
 
@@ -32,9 +28,14 @@ y = 0
 save_to_clipboard = true
 
 [window.padding]
-x = 5
-y = 1
+x = 1
+y = 0
+
+[general]
+import = [
+    "~/.config/alacritty/themes/onedark.toml"
+]
 
 [window]
 decorations = "None"
-# opacity = 0.98
+opacity = 0.96
