--- a/tmux/modules/bindings/tmux.pane.conf
+++ b/tmux/modules/bindings/tmux.pane.conf
@@ -5,8 +5,12 @@ bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 10
 bind -n M-z if-shell -F '#{==:#{window_panes},1}' \
-  'resize-pane -Z; split-window -h -d -c "#{pane_current_path}"' \
-  'resize-pane -Z'
+  'resize-pane -Z; split-window -v -c "#{pane_current_path}"' \
+  'if-shell -F "#{==:#{window_panes},2}" \
+    "if-shell -F \"#{window_zoomed_flag}\" \
+      \"resize-pane -Z; select-pane -t 2\" \
+      \"select-pane -t 1; resize-pane -Z\"" \
+    "resize-pane -Z"'
 
 # Split panes
 bind s split-window -v -c "#{pane_current_path}"
