--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 #################################### OPTIONS ###################################
 tmux_dir="~/.config/tmux"
 tmux_modules_dir="$tmux_dir/modules"
-tmux_plugins_dir="$tmux_dir/plugins"
+tmux_plugins_dir="$HOME/.local/share/tmux/plugins"
 
 ################################## CONF FILES ##################################
 source "$tmux_modules_dir/tmux.opts.conf"
@@ -13,7 +13,6 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH "$tmux_plugins_dir"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 
 run "$tmux_plugins_dir/tpm/tpm"
