--- a/tmux/modules/ui/tmux.status_bar.conf
+++ b/tmux/modules/ui/tmux.status_bar.conf
@@ -7,8 +7,6 @@ set -g @mode_indicator_prefix_prompt " #S #[default]#[fg=$color_fg]$mode_separat
 set -g @mode_indicator_prefix_mode_style fg=$color_dark_yellow,bold
 set -g @mode_indicator_copy_prompt " COPY #[default]#[fg=$color_green]$mode_separator"
 set -g @mode_indicator_copy_mode_style fg=$color_green,bold
-set -g @mode_indicator_sync_prompt " SYNC #[default]#[fg=$color_red]$mode_separator"
-set -g @mode_indicator_sync_mode_style fg=$color_bg,bg=$color_red,bold
 
 # tmux cpu
 set -g @cpu_percentage_format "%3.0f%%"
@@ -18,8 +16,6 @@ set -g @ram_percentage_format "%3.0f%%"
 set -g status on
 set -g status-justify centre
 set -g status-position top       
-set -g status-left-length 90
-set -g status-right-length 90
 set -g status-style "bg=$color_fg"
 
 set -g pane-active-border fg=$color_gray
@@ -32,6 +28,6 @@ set-window-option -g mode-style bg=$color_purple,fg=$color_bg
 #################################### FORMAT ####################################
 
 set -g status-left "#{tmux_mode_indicator}#[fg=$color_gray]#{?window_zoomed_flag,󰍉 ,}#[default]"
-set -g status-right "#[fg=$color_gray]IP: #(whoamip)  CPU:#{cpu_percentage}  MEM:#{ram_percentage}   : #(~/.dotfiles/scripts/gh-pr-attention.sh)  #[fg=$color_gray] %R"
+set -g status-right "#[fg=$color_gray]CPU:#{cpu_percentage}  MEM:#{ram_percentage}   : #(~/.dotfiles/scripts/gh-pr-attention.sh)  #[fg=$color_gray] %R"
 setw -g window-status-format "#[fg=$color_gray,italics]#I: #[noitalics]#W"
 setw -g window-status-current-format "#[fg=$color_purple,italics]#I: #[fg=$color_buffer,noitalics,bold]#W"
