minor setup changes

--- a/tmux/modules/ui/tmux.status_bar.conf
+++ b/tmux/modules/ui/tmux.status_bar.conf
@@ -16,6 +16,8 @@ set -g @ram_percentage_format "%3.0f%%"
 set -g status on
 set -g status-justify centre
 set -g status-position top       
+set -g status-left-length 90
+set -g status-right-length 90
 set -g status-style "bg=$color_fg"
 
 set -g pane-active-border fg=$color_gray
