--- a/tmux/modules/ui/tmux.status_bar.conf
+++ b/tmux/modules/ui/tmux.status_bar.conf
@@ -30,6 +30,6 @@ set-window-option -g mode-style bg=$color_purple,fg=$color_bg
 #################################### FORMAT ####################################
 
 set -g status-left "#{tmux_mode_indicator}#[fg=$color_gray]#{?window_zoomed_flag,󰍉 ,}#[default]"
-set -g status-right "#[fg=$color_gray]CPU:#{cpu_percentage}  MEM:#{ram_percentage}   : #(~/.dotfiles/scripts/gh-pr-attention.sh)  #[fg=$color_gray] %R"
+set -g status-right "#[fg=$color_gray]IP: #(whoamip)  CPU:#{cpu_percentage}  MEM:#{ram_percentage}   : #(~/.dotfiles/scripts/gh-pr-attention.sh)  #[fg=$color_gray] %R"
 setw -g window-status-format "#[fg=$color_gray,italics]#I: #[noitalics]#W"
 setw -g window-status-current-format "#[fg=$color_purple,italics]#I: #[fg=$color_buffer,noitalics,bold]#W"
