--- a/tmux/modules/ui/tmux.status_bar.conf
+++ b/tmux/modules/ui/tmux.status_bar.conf
@@ -11,6 +11,7 @@ set -g @mode_indicator_copy_mode_style fg=$color_green,bold
 # tmux cpu
 set -g @cpu_percentage_format "%3.0f%%"
 set -g @ram_percentage_format "%3.0f%%"
+
 #################################### OPTIONS ###################################
 
 set -g status on
@@ -18,8 +19,7 @@ set -g status-justify centre
 set -g status-position top       
 set -g status-left-length 90
 set -g status-right-length 90
-set -g status-style "bg=$color_fg"
-
+set -g status-style "bg=#{?#{m:ssh,#{window_name}},red,$color_fg}"
 set -g pane-active-border fg=$color_gray
 set -g pane-border-style fg=$color_gray
 set-option -g popup-border-style fg=$color_light_purple
@@ -32,4 +32,4 @@ set-window-option -g mode-style bg=$color_purple,fg=$color_bg
 set -g status-left "#{tmux_mode_indicator}#[fg=$color_gray]#{?window_zoomed_flag,󰍉 ,}#[default]"
 set -g status-right "#[fg=$color_gray]IP: #(whoamip)  CPU:#{cpu_percentage}  MEM:#{ram_percentage}   : #(~/.dotfiles/scripts/gh-pr-attention.sh)  #[fg=$color_gray] %R"
 setw -g window-status-format "#[fg=$color_gray,italics]#I: #[noitalics]#W"
-setw -g window-status-current-format "#[fg=#{?#{m:ssh,#{window_name}},red,$color_purple},italics]#I: #[fg=#{?#{m:ssh,#{window_name}},red,$color_buffer},noitalics,bold]#W"
+setw -g window-status-current-format "#[fg=$color_purple,italics]#I: #[fg=$color_buffer,noitalics,bold]#W"
