--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,5 +14,7 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH "$tmux_plugins_dir"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'alexekdahl/tmux-compile'
+set -g @compile-mode-key "C-b"
 
 run "$tmux_plugins_dir/tpm/tpm"
