nvim: smart_replace

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,5 +16,6 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'alexekdahl/tmux-compile'
 set -g @compile-mode-key "C-b"
+set -g @compile-mode-open-file-key "Enter"
 
 run "$tmux_plugins_dir/tpm/tpm"
