--- a/tmux/modules/ui/themes/tmux.tachyon.conf
+++ b/tmux/modules/ui/themes/tmux.tachyon.conf
@@ -1,4 +1,4 @@
-#################################### CONIFER ###################################
+#################################### TACHYON ###################################
 color_bg="#151515"          # bg0 - main background
 color_fg="#161716"          # bg1 - slightly lighter background for panels
 color_green="#85b884"       # leaf - main green
