--- a/tmux/modules/ui/tmux.ui.conf
+++ b/tmux/modules/ui/tmux.ui.conf
@@ -1,2 +1,2 @@
-source "$tmux_modules_dir/ui/themes/tmux.conifer.conf"
+source "$tmux_modules_dir/ui/themes/tmux.tachyon.conf"
 source "$tmux_modules_dir/ui/tmux.status_bar.conf"
