--- a/tmux/modules/ui/tmux.status_bar.conf
+++ b/tmux/modules/ui/tmux.status_bar.conf
@@ -19,7 +19,7 @@ set -g status-justify centre
 set -g status-position top       
 set -g status-left-length 90
 set -g status-right-length 90
-set -g status-style "bg=#{?#{m:ssh,#{window_name}},red,$color_fg}"
+set -g status-style "bg=#{?#{m:ssh,#{window_name}},red,$color_bg}"
 set -g pane-active-border fg=$color_gray
 set -g pane-border-style fg=$color_gray
 set-option -g popup-border-style fg=$color_light_purple
