--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -2,7 +2,7 @@
 TERM = "xterm-256color"
 
 [font]
-size = 12.5
+size = 13.5
 
 [font.bold]
 family = "MesloLGM Nerd Font"
@@ -20,15 +20,11 @@ style = "Italic"
 family = "MesloLGM Nerd Font"
 style = "Regular"
 
-[font.offset]
-x = 0
-y = 0
-
 [selection]
 save_to_clipboard = true
 
 [window.padding]
-x = 1
+x = 0
 y = 0
 
 [general]
@@ -37,5 +33,6 @@ import = [
 ]
 
 [window]
+startup_mode = "Fullscreen"
 decorations = "None"
-opacity = 0.96
+opacity = 1
