--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,5 +17,7 @@ set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'alexekdahl/tmux-compile'
 set -g @compile-mode-key "C-b"
 set -g @compile-mode-open-file-key "Enter"
+set -g @compile-mode-height "40%"
+set -g @compile-mode-history-file "/tmp/tmux-compile-history"
 
 run "$tmux_plugins_dir/tpm/tpm"
