--- a/tmux/modules/bindings/tmux.menu.conf
+++ b/tmux/modules/bindings/tmux.menu.conf
@@ -1,22 +1,37 @@
-# Menu configuration
-bind-key -n C-q display-menu -x L \
-    "New Session"                        S "command-prompt -p \"New Session:\" \"new-session -A -s '%%'\"" \
-    "Kill Other Session(s)"              X "kill-session -a" \
-    "" \
-    "New Window"                         n new-window \
-    "Choose Window"                      c choose-window \
-    "Kill Window"                        x kill-window \
-    "Previous Window"                    P previous-window \
-    "Next Window"                        N next-window \
-    "Horizontal Split"                   - "split-window -h" \
-    "Vertical Split"                     / "split-window -v"  \
-    "Kill Other Panes"                   k "kill-pane -a " \
-    "" \
-    "Layout Horizontal"                  h "select-layout even-horizontal"  \
-    "Layout Vertical"                    v "select-layout even-horizontal"  \
-    "" \
-    "Swap Pane Up"                       < "swap-pane -U" \
-    "Swap Pane Down"                     > "swap-pane -D" \
-    "Break Pane"                         t break-pane \
-    "Join Pane"                          j "choose-window 'join-pane -h -s \"%%\"'" \
-    "#{?window_zoomed_flag,Unzoom,Zoom}" z "resize-pane -Z"
+# Menu configuration - styled with tachyon theme + nested submenus
+bind-key -n C-q display-menu -T "#[fg=#AA749F,bold] tmux " -x L \
+    "#[fg=#85b884]  Sessions"            s "display-menu -T \"#[fg=#85b884,bold] Sessions \" -x L \
+        \"New Session\"                  S \"command-prompt -p 'New Session:' 'new-session -A -s \\\"%%\\\"'\" \
+        \"Kill Other Session(s)\"        X \"kill-session -a\" \
+        \"Switch Session\"              s \"display-popup -E -b none \
+            \\\"tmux list-sessions -F '#{?session_attached,,#{session_name}}' | \
+            sed '/^\$/d' | \
+            fzf --border=rounded --border-label='Sessions' --reverse --color='border:#5A5F8C' | \
+            xargs tmux switch-client -t\\\"\" \
+        \"\" \
+        \"Previous\"                     , \"switch-client -p\" \
+        \"Next\"                         . \"switch-client -n\"" \
+    "#[fg=#3982B7]  Windows"             w "display-menu -T \"#[fg=#3982B7,bold] Windows \" -x L \
+        \"New Window\"                   n \"new-window\" \
+        \"Kill Window\"                  x \"kill-window\" \
+        \"Rename Window\"               r \"command-prompt 'rename-window %%'\" \
+        \"\" \
+        \"Previous\"                     P \"previous-window\" \
+        \"Next\"                         N \"next-window\" \
+        \"Choose Window\"                c \"choose-window\"" \
+    "#[fg=#D19B6E]  Panes"               p "display-menu -T \"#[fg=#D19B6E,bold] Panes \" -x L \
+        \"Horizontal Split\"             - \"split-window -h -c '#{pane_current_path}'\" \
+        \"Vertical Split\"               / \"split-window -v -c '#{pane_current_path}'\" \
+        \"Kill Other Panes\"             k \"kill-pane -a\" \
+        \"\" \
+        \"Swap Up\"                      < \"swap-pane -U\" \
+        \"Swap Down\"                    > \"swap-pane -D\" \
+        \"Break Pane\"                   t \"break-pane\" \
+        \"Join Pane\"                    j \"choose-window 'join-pane -h -s \\\"%%\\\"'\" \
+        \"#{?window_zoomed_flag,Unzoom,Zoom}\" z \"resize-pane -Z\"" \
+    "#[fg=#FFE591]  Layout"              l "display-menu -T \"#[fg=#FFE591,bold] Layout \" -x L \
+        \"Even Horizontal\"              h \"select-layout even-horizontal\" \
+        \"Even Vertical\"                v \"select-layout even-vertical\" \
+        \"Main Horizontal\"              H \"select-layout main-horizontal\" \
+        \"Main Vertical\"                V \"select-layout main-vertical\" \
+        \"Tiled\"                         t \"select-layout tiled\""
