--- a/tmux/modules/tmux.opts.conf
+++ b/tmux/modules/tmux.opts.conf
@@ -1,8 +1,5 @@
-# utf8 is on
-setw -q -g utf8 on
-
 set -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ",xterm*:Tc"
+set -as terminal-features 'xterm*:RGB'
 set -sg repeat-time 500
 setw -g pane-base-index 1
 setw -g automatic-rename on
